[project]
name = "elytra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cma>=4.4.2",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pandas-stubs>=2.3.3.260113",
    "scipy>=1.17.0",
    "scipy-stubs>=1.17.0.2",
]
