[project]
name = "elytra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "casadi>=3.7.2",
    "cma>=4.4.2",
    "jax>=0.9.0",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pandas-stubs>=2.3.3.260113",
    "plotly>=6.5.2",
    "scipy>=1.17.0",
    "scipy-stubs>=1.17.0.2",
    "torch",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
